# backend/internal/api/handler.go
@@ -1,10 +1,10 @@
 package api
 
 import (
+	"log"
 	"net/http"
-	"time"
 
-	"github.com/arturshadnik/gobot/backend/internal/models"
+	"github.com/arturshadnik/gobot/backend/internal/service"
 	"github.com/gin-gonic/gin"
 )
 
@@ -20,19 +20,19 @@ func HealthCheck(c *gin.Context) {
 // @Tags chat
 // @Accept  json
 // @Produce  json
-// @Param message body models.Message true "Message request"
+// @Param message query string true "Message"
 // @Success 200
 // @Router /chat [post]
 func BotResponse(c *gin.Context) {
-	var incomingMessage models.Message
-	if err := c.BindJSON(&incomingMessage); err != nil {
-		c.Error(err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+
+	query := c.Query("message")
+
+	outgoingMessage, err := service.ProcessIncomingMsg(query)
+	if err != nil {
+		log.Printf("Error processing message %v ", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"detail": "Internal Server Error"})
 		return
 	}
-
-	outgoingMessage := models.Message{UUID: incomingMessage.UUID, Name: "gobot", Timestamp: time.Now(), Body: "hello"}
-
 	c.JSON(http.StatusOK, outgoingMessage)
 }
 
@@ -50,22 +50,5 @@ func GetMessages(c *gin.Context) {
 	id := c.Param("id")
 	c.JSON(http.StatusOK, gin.H{
 		"id": id,
-	})
-}
-
-// for future reference
-// HandleWithQuery godoc
-// @Summary handle query
-// @Description example for handling a request with a query
-// @Tags chat
-// @Accept  json
-// @Produce  json
-// @Param        q    query     string  false  "name search by q"  Format(email)
-// @Success 200
-// @Router /query [get]
-func HandlerWithQuery(c *gin.Context) {
-	query := c.Query("query")
-	c.JSON(http.StatusOK, gin.H{
-		"query": query,
 	})
 }
